<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:title="@string/menu_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_host"
        android:title="@string/menu_host"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_browser"
        android:title="@string/menu_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
